# ledgerbot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  build.sh  release.sh  run.sh
.claude/skills/: command_trait_architecture.md
.claude/skills/command-trait/: SKILL.md
ledgerbot/: Cargo.toml
ledgerbot/src/: batch.rs  config.rs  handlers.rs  main.rs  markdown_string.rs  parser.rs  parser_old.rs  storage.rs  storage_traits.rs
ledgerbot/src/commands/: categories.rs  command_add_category.rs  command_add_expense.rs  command_add_filter.rs  command_add_filter2.rs  command_add_words_filter.rs  command_categories.rs  command_clear.rs  command_clear_categories.rs  command_clear_expenses.rs  command_edit_filter.rs  command_edit_words_filter.rs  command_help.rs  command_list.rs  command_remove_category.rs  command_remove_filter.rs  command_rename_category.rs  command_report.rs  command_start.rs  command_trait.rs  expenses.rs  filters.rs  help.rs  mod.rs  report.rs
ledgerbot/src/menus/: common.rs  mod.rs  select_category.rs  select_category_filter.rs  select_word.rs  update_category.rs  update_category_filter.rs
ledgerbot/src/parser/: extract_words.rs  mod.rs
ledgerbot/src/storages/: batch_storage.rs  category_storage.rs  expense_storage.rs  mod.rs  periods_strorage.rs  storage.rs  storage_traits.rs
ledgerbot/src/utils/: extract_words.rs  mod.rs  parse_expenses.rs
src/: batch.rs  commands.rs  config.rs  emojis.rs  handlers.rs  macros.rs  main.rs  markdown_string.rs  markdown_validate.rs  parser.rs  storage.rs  storage_traits.rs
src/commands/: categories.rs  expenses.rs  filters.rs  help.rs  list.rs  mod.rs  report.rs
yoroolbot/: Cargo.toml
yoroolbot/src/: api.rs  lib.rs
yoroolbot/src/api/command_trait/: mod.rs
yoroolbot/src/api/markdown/: macros.rs  mod.rs  string.rs  validate.rs
yoroolbot/src/api/storage/: callback_data_storage.rs  mod.rs
