[workspace]
members = ["ledgerbot", "yoroolbot"]
resolver = "2"

[workspace.dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
async-trait = "0.1"
