[package]
name = "ledgerbot"
version = "0.1.5"
edition = "2024"

[[bin]]
name = "ledgerbot"
path = "src/main.rs"

[dependencies]
teloxide = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }